--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -14,12 +14,13 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: lowlighter/metrics@latest
+      - uses: mikey-/metrics@master
         with:
           token: ${{ secrets.METRICS_TOKEN }}
           user: ItzDabbzz
           template: classic
-          base: header, activity, repositories
+          base: header, activity, community, repositories, metadata
+          config_order: introduction, base.header, base.activity+community, base.repositories, base.metadata, wakatime, notable, followup, reactions, people, languages, achievements, activity
           base_hireable: yes
           base_indepth: yes
           config_display: large
@@ -38,3 +39,29 @@ jobs:
           plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
           plugin_wakatime_url: https://wakatime.com
           plugin_wakatime_user: ItzDabbzz
+          plugin_activity: yes
+          plugin_activity_days: 360
+          plugin_activity_filter: push, issue, pr, review, comment, wiki, fork, public, member, release, ref/create, ref/delete
+          plugin_activity_limit: 10
+          plugin_activity_load: 10
+          plugin_activity_timestamps: yes
+          plugin_activity_visibility: all
+          plugin_followup: yes
+          plugin_followup_sections: all
+          plugin_introduction: yes
+          plugin_introduction_title: yes
+          plugin_languages: yes
+          plugin_languages_details: bytes-size, percentage
+          plugin_languages_limit: 0
+          plugin_languages_recent_days: 365
+          plugin_languages_recent_load: 1000
+          plugin_languages_sections: most-used, recently-used
+          plugin_languages_threshold: 0%
+          repositories: 100
+          repositories_affiliations: owner, collaborator, organization_member
+          repositories_forks: no
+          plugin_notable: yes
+          plugin_notable_repositories: yes
+          plugin_people: yes
+          plugin_people_types: owner, collaborator, organization_member
+          plugin_reactions: yes
