--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -2,7 +2,7 @@
 name: Metrics
 on:
   # Schedule updates (each hour)
-  schedule: [{cron: "0 * * * *"}]
+  schedule: [{cron: "0 14 */7 * *"}]
   # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
   push: {branches: ["master", "main"]}
@@ -14,11 +14,11 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: mikey-/metrics@master
+      - name: dabz metrics
+        uses: ItzDabbzz/metrics@master
         with:
           token: ${{ secrets.METRICS_TOKEN }}
           user: ItzDabbzz
-          template: classic
           base: header, activity, community, repositories, metadata
           config_order: introduction, base.header, base.activity+community, base.repositories, base.metadata, wakatime, notable, followup, reactions, people, languages, achievements, activity
           base_hireable: yes
