--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -15,7 +15,7 @@ jobs:
       contents: write
     steps:
       - name: ItzDabbzz/metrics
-        uses: Imikey-/metrics@master
+        uses: mikey-/metrics@master
         with:
           token: ${{ secrets.METRICS_TOKEN }}
           user: ItzDabbzz
