--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -31,7 +31,7 @@ jobs:
           plugin_achievements: yes
           plugin_achievements_display: detailed
           plugin_achievements_secrets: yes
-          plugin_achievements_threshold: C
+          plugin_achievements_threshold: X
           plugin_wakatime: yes
           plugin_wakatime_token: ${{ secrets.WAKA_TOKEN }}
           plugin_wakatime_days: 7
@@ -52,12 +52,14 @@ jobs:
           plugin_introduction: yes
           plugin_introduction_title: yes
           plugin_languages: yes
-          plugin_languages_details: bytes-size, percentage
+          plugin_languages_details: bytes-size, percentage, lines
           plugin_languages_limit: 0
           plugin_languages_recent_days: 365
           plugin_languages_recent_load: 1000
           plugin_languages_sections: most-used, recently-used
           plugin_languages_threshold: 0%
+          plugin_languages_indepth: yes
+          plugin_languages_analysis_timeout: 15
           repositories: 100
           repositories_affiliations: owner, collaborator, organization_member
           repositories_forks: no
@@ -66,3 +68,6 @@ jobs:
           plugin_people: yes
           plugin_people_types: owner, collaborator, organization_member
           plugin_reactions: yes
+          plugin_music: yes
+          plugin_music_mode: recent
+          plugin_music_provider: youtube
