--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -71,3 +71,4 @@ jobs:
           plugin_music: yes
           plugin_music_mode: recent
           plugin_music_provider: youtube
+          plugin_music_token: ${{ secrets.YOUTUBE_MUSIC_TOKENS }}
