--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -21,7 +21,7 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           user: ItzDabbzz
           base: header, activity, community, repositories, metadata
-          config_order: introduction, base.header, base.activity+community, base.repositories, base.metadata, wakatime, notable, followup, reactions, people, languages, achievements, activity
+          config_order: introduction, base.header, base.activity+community, base.repositories, base.metadata, music, steam, wakatime, notable, followup, reactions, people, languages, achievements, activity
           base_hireable: yes
           base_indepth: yes
           config_display: large
@@ -69,6 +69,10 @@ jobs:
           plugin_people_types: owner, collaborator, organization_member
           plugin_reactions: yes
           plugin_music: yes
-          plugin_music_mode: recent
+          plugin_music_mode: top
+          plugin_music_top_type: tracks
           plugin_music_provider: youtube
           plugin_music_token: ${{ secrets.YOUTUBE_MUSIC_TOKENS }}
+          plugin_steam_token: ${{ secrets.STEAM_TOKEN }}
+          plugin_steam: yes
+          plugin_steam_user: "76561198095362587"
