--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -21,20 +21,16 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           user: ItzDabbzz
           base: header, activity, community, repositories, metadata
-          config_order: introduction, base.header, base.activity+community, base.repositories, base.metadata, music, steam, wakatime, notable, followup, reactions, people, languages, achievements, activity
+          config_order: introduction, base.header, base.activity+community, base.repositories, base.metadata, music, steam, wakatime, notable, followup, reactions, people, languages, activity
           base_hireable: yes
           base_indepth: yes
           config_display: large
           config_octicon: yes
           config_timezone: America/Chicago
           config_twemoji: yes
-          plugin_achievements: yes
-          plugin_achievements_display: detailed
-          plugin_achievements_secrets: yes
-          plugin_achievements_threshold: X
           plugin_wakatime: yes
           plugin_wakatime_token: ${{ secrets.WAKA_TOKEN }}
-          plugin_wakatime_days: 7
+          plugin_wakatime_days: 365
           plugin_wakatime_limit: 5
           plugin_wakatime_repositories_visibility: all
           plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
@@ -76,3 +72,8 @@ jobs:
           plugin_steam_token: ${{ secrets.STEAM_TOKEN }}
           plugin_steam: yes
           plugin_steam_user: "76561198095362587"
+          plugin_anilist: yes
+          plugin_anilist_user: ItzDabbzz
+          plugin_anilist_medias: anime
+          plugin_anilist_sections: favorites, watching
+          plugin_anilist_limit: 3
