--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -48,32 +48,60 @@ jobs:
           plugin_introduction: yes
           plugin_introduction_title: yes
           plugin_languages: yes
-          plugin_languages_details: bytes-size, percentage, lines
-          plugin_languages_limit: 0
-          plugin_languages_recent_days: 365
-          plugin_languages_recent_load: 1000
-          plugin_languages_sections: most-used, recently-used
-          plugin_languages_threshold: 0%
-          plugin_languages_indepth: yes
           plugin_languages_analysis_timeout: 15
+          plugin_languages_analysis_timeout_repositories: 7.5
+          plugin_languages_categories: markup, programming
+          plugin_languages_colors: github
+          plugin_languages_indepth: yes
+          plugin_languages_limit: 8
+          plugin_languages_recent_categories: markup, programming
+          plugin_languages_recent_days: 14
+          plugin_languages_recent_load: 300
+          plugin_languages_sections: most-used
+          plugin_languages_threshold: 0%
+          plugin_lines: yes
+          plugin_lines_history_limit: 1
+          plugin_lines_repositories_limit: 4
+          plugin_lines_sections: base
           repositories: 100
           repositories_affiliations: owner, collaborator, organization_member
-          repositories_forks: no
+          repositories_forks: yes
           plugin_notable: yes
           plugin_notable_repositories: yes
           plugin_people: yes
           plugin_people_types: owner, collaborator, organization_member
           plugin_reactions: yes
           plugin_music: yes
-          plugin_music_mode: top
-          plugin_music_top_type: tracks
+          plugin_music_limit: 4
+          plugin_music_mode: recent
           plugin_music_provider: youtube
+          plugin_music_time_range: short
+          plugin_music_top_type: tracks
           plugin_music_token: ${{ secrets.YOUTUBE_MUSIC_TOKENS }}
           plugin_steam_token: ${{ secrets.STEAM_TOKEN }}
           plugin_steam: yes
-          plugin_steam_user: "76561198095362587"
+          plugin_steam_achievements_limit: 2
+          plugin_steam_games_limit: 3
+          plugin_steam_playtime_threshold: 2
+          plugin_steam_recent_games_limit: 3
+          plugin_steam_sections: player, most-played, recently-played
+          plugin_steam_user: 76561198095362587
           plugin_anilist: yes
           plugin_anilist_user: ItzDabbzz
-          plugin_anilist_medias: anime
-          plugin_anilist_sections: favorites, watching
-          plugin_anilist_limit: 3
+          plugin_anilist_limit: 2
+          plugin_anilist_limit_characters: 22
+          plugin_anilist_medias: anime, manga
+          plugin_anilist_sections: favorites
+          plugin_anilist_shuffle: yes
+          plugin_traffic: yes
+          plugin_stars: yes
+          plugin_stars_limit: 4
+          plugin_habits: yes
+          plugin_habits_charts_type: graph
+          plugin_habits_days: 14
+          plugin_habits_facts: yes
+          plugin_habits_from: 200
+          plugin_habits_languages_limit: 8
+          plugin_habits_languages_threshold: 0%
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: full-year
