--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -78,7 +78,6 @@ jobs:
           plugin_music_time_range: short
           plugin_music_top_type: tracks
           plugin_music_token: ${{ secrets.YOUTUBE_MUSIC_TOKENS }}
-          plugin_steam_token: ${{ secrets.STEAM_TOKEN }}
           plugin_steam: yes
           plugin_steam_achievements_limit: 2
           plugin_steam_games_limit: 3
@@ -86,6 +85,7 @@ jobs:
           plugin_steam_recent_games_limit: 3
           plugin_steam_sections: player, most-played, recently-played
           plugin_steam_user: 76561198095362587
+          plugin_steam_token: ${{ secrets.PLUGIN_STEAM_TOKEN }}
           plugin_anilist: yes
           plugin_anilist_user: ItzDabbzz
           plugin_anilist_limit: 2
