--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -17,36 +17,44 @@ jobs:
       - name: ItzDabbzz/metrics
         uses: felipecrs/metrics@master
         with:
-          use_prebuilt_image: no
-          token: ${{ secrets.METRICS_TOKEN }}
-          user: ItzDabbzz
           base: header, activity, community, repositories, metadata
-          config_order: introduction, base.header, base.activity+community, base.repositories, base.metadata, music, steam, wakatime, notable, followup, reactions, people, languages, activity
           base_hireable: yes
           base_indepth: yes
           config_display: large
           config_octicon: yes
+          config_order: introduction, base.header, base.activity+community, base.repositories, base.metadata, music, steam, wakatime, notable, followup, reactions, people, languages, activity
           config_timezone: America/Chicago
           config_twemoji: yes
-          plugin_wakatime: yes
-          plugin_wakatime_token: ${{ secrets.WAKA_TOKEN }}
-          plugin_wakatime_days: 365
-          plugin_wakatime_limit: 5
-          plugin_wakatime_repositories_visibility: all
-          plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
-          plugin_wakatime_url: https://wakatime.com
-          plugin_wakatime_user: ItzDabbzz
+          plugin_achievements: yes
+          plugin_achievements_display: detailed
+          plugin_achievements_secrets: yes
+          plugin_achievements_threshold: X
           plugin_activity: yes
-          plugin_activity_days: 360
-          plugin_activity_filter: push, issue, pr, review, comment, wiki, fork, public, member, release, ref/create, ref/delete
-          plugin_activity_limit: 10
-          plugin_activity_load: 10
-          plugin_activity_timestamps: yes
-          plugin_activity_visibility: all
+          plugin_activity_days: 14
+          plugin_activity_filter: all
+          plugin_activity_limit: 5
+          plugin_activity_load: 300
+          plugin_activity_visibility: public
+          plugin_anilist: yes
+          plugin_anilist_limit: 2
+          plugin_anilist_limit_characters: 22
+          plugin_anilist_medias: anime, manga
+          plugin_anilist_sections: favorites
+          plugin_anilist_shuffle: yes
+          plugin_anilist_user: ItzDabbzz
           plugin_followup: yes
           plugin_followup_sections: all
+          plugin_habits: yes
+          plugin_habits_charts_type: graph
+          plugin_habits_days: 14
+          plugin_habits_facts: yes
+          plugin_habits_from: 200
+          plugin_habits_languages_limit: 8
+          plugin_habits_languages_threshold: 0%
           plugin_introduction: yes
           plugin_introduction_title: yes
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: full-year
           plugin_languages: yes
           plugin_languages_analysis_timeout: 15
           plugin_languages_analysis_timeout_repositories: 7.5
@@ -63,45 +71,41 @@ jobs:
           plugin_lines_history_limit: 1
           plugin_lines_repositories_limit: 4
           plugin_lines_sections: base
-          repositories: 100
-          repositories_affiliations: owner, collaborator, organization_member
-          repositories_forks: yes
-          plugin_notable: yes
-          plugin_notable_repositories: yes
-          plugin_people: yes
-          plugin_people_types: owner, collaborator, organization_member
-          plugin_reactions: yes
           plugin_music: yes
           plugin_music_limit: 4
           plugin_music_mode: recent
           plugin_music_provider: youtube
           plugin_music_time_range: short
-          plugin_music_top_type: tracks
           plugin_music_token: ${{ secrets.YOUTUBE_MUSIC_TOKENS }}
+          plugin_music_top_type: tracks
+          plugin_notable: yes
+          plugin_notable_repositories: yes
+          plugin_people: yes
+          plugin_people_types: owner, collaborator, organization_member
+          plugin_reactions: yes
+          plugin_repositories: yes
+          plugin_repositories_featured: ItzDabbzz/gtav-audio-occlusion
+          plugin_repositories_order: featured, pinned, starred, random
           plugin_steam: yes
           plugin_steam_achievements_limit: 2
           plugin_steam_games_limit: 3
-          plugin_steam_playtime_threshold: 2
+          plugin_steam_playtime_threshold: 3
           plugin_steam_recent_games_limit: 3
           plugin_steam_sections: player, most-played, recently-played
           plugin_steam_user: 76561198095362587
-          plugin_steam_token: ${{ secrets.PLUGIN_STEAM_TOKEN }}
-          plugin_anilist: yes
-          plugin_anilist_user: ItzDabbzz
-          plugin_anilist_limit: 2
-          plugin_anilist_limit_characters: 22
-          plugin_anilist_medias: anime, manga
-          plugin_anilist_sections: favorites
-          plugin_anilist_shuffle: yes
-          plugin_traffic: yes
           plugin_stars: yes
           plugin_stars_limit: 4
-          plugin_habits: yes
-          plugin_habits_charts_type: graph
-          plugin_habits_days: 14
-          plugin_habits_facts: yes
-          plugin_habits_from: 200
-          plugin_habits_languages_limit: 8
-          plugin_habits_languages_threshold: 0%
-          plugin_isocalendar: yes
-          plugin_isocalendar_duration: full-year
+          plugin_traffic: yes
+          plugin_wakatime: yes
+          plugin_wakatime_days: 365
+          plugin_wakatime_limit: 5
+          plugin_wakatime_repositories_visibility: all
+          plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
+          plugin_wakatime_token: ${{ secrets.WAKA_TOKEN }}
+          plugin_wakatime_url: https://wakatime.com
+          plugin_wakatime_user: ItzDabbzz
+          repositories: 100
+          repositories_affiliations: owner, collaborator, organization_member
+          repositories_forks: yes
+          token: ${{ secrets.METRICS_TOKEN }}
+          user: ItzDabbzz
